--- a/index.html
+++ b/index.html
@@ -9,52 +9,60 @@
 </head>
 
 <body>
+  <header class="header">
   <img src="./img/bikcraft.svg" alt="Bikcraft">
 
-  <div class="menu">
-    <a href="/"> Sobre </a>
-    <a href="/"> Produtos </a>
-    <a href="/"> Lojas </a>
-    <a href="/"> Contato </a>
-  </div>
-  <div class="conteudo">
-    <div class="introducao">
-      <span class="detalhe"> </span>
-      <h2> Bicicletas feitas a mão </h2>
+  <nav aria-label="primária">
+    <ul class="menu"> 
+      <li> <a href="/"> Sobre </a> </li>
+      <li> <a href="/"> Produtos </a> </li>
+      <li> <a href="/"> Lojas </a> </li>
+      <li> <a href="/"> Contato </a> </li>
+    </ul>
+  </nav>
+</header>
+
+  <main>
+    <article class="conteudo">
+    <div class="introducao" aria-labelledby="label-introducao">
+      <h1 id="label-introducao"> Bicicletas feitas a mão </h1>
       <p> A Nimbus Stark é a melhor bicicleta feita pela nossa equipe. Ela vem equipada com os melhores acessório da
         marca.</p>
       <button> VER MAIS </button>
     </div>
 
     <img src="./img/bicicleta.jpg" alt="bicicleta">
+  </article>
 
-    <h3 class="subtitulo"> VANTAGENS BIKCRAFT </h3>
+<article class="conteudo" aria-labelledby="label-vantagens">
+    <h2 class="subtitulo" id="label-vantagens"> VANTAGENS BIKCRAFT </h2>
 
-    <div class="vantagens">
-      <div class="vantagens-item">
+    <ul class="vantagens">
+      <li class="vantagens-item">
         <img src="./img/eletrica.svg">
 
-        <h4> Motor elétrico </h4>
+        <h3> Motor elétrico </h3>
         <p> Permite você viajar distâncias inimaginaveis com a sua bike. </p>
-      </div>
+      </li>
 
-      <div class="vantagens-item">
+      <li class="vantagens-item">
         <img src="./img/velocidade.svg">
-        <h4> 40 km/h </h4>
+        <h3> 40 km/h </h3>
         <p> A mais rápida bicicleta elétrica disponível hoje no mercado. </p>
-      </div>
+      </li>
 
-      <div class="vantagens-item">
+      <li class="vantagens-item">
         <img src="./img/rastreador.svg">
-        <h4> Rastreador </h4>
+        <h3> Rastreador </h3>
         <p> Rastreador e sistema anti-furto para garantir o seu sossego. </p>
-      </div>
-    </div>
-  </div>
+        </li>
+      </ul>
+    </article>
+  </main>
 
-  <div class="rodape">
+  <footer class="rodape">
     <p> Bikcraft. Alguns Direitos Reservados.</p>
-  </div>
+  </footer>
 </body>
 
 
