--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
       <button> VER MAIS </button>
     </div>
 
+    <div class="introducao-cover">
     <img src="./img/bicicleta.jpg" alt="bicicleta">
+  </div>
   </article>
 
-<article class="conteudo" aria-labelledby="label-vantagens">
+<article class="conteudo conteudo-vantagem" aria-labelledby="label-vantagens">
     <h2 class="subtitulo" id="label-vantagens"> VANTAGENS BIKCRAFT </h2>
 
     <ul class="vantagens">
